# hydroflow-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  additions-addendum.md  dream_api.py  pyproject.toml  roadmap-additions.md
.github/workflows/: ci.yml  publish.yml
docs/design/: layer0_core_calculations.md
examples/: layer0.py  network_basics.py  tutorial_pump_scheduling.py  tutorial_simple_network.py  tutorial_tank_filling.py
src/hydroflow/: __init__.py  _types.py  channels.py  geometry.py  hydrology.py  materials.py  pressure.py  routing.py  structures.py  units.py
src/hydroflow/core/: __init__.py  hydrology.py  pressure.py  routing.py  structures.py
src/hydroflow/data/: _aliases.json  _sources.json  fittings.json
src/hydroflow/data/materials/: closed_conduit.json  open_channel_lined.json  open_channel_unlined.json
src/hydroflow/data/standards/din_en/: _meta.json  materials.json
src/hydroflow/network/: __init__.py  _time.py  components.py  controls.py  errors.py  io.py  model.py  plot.py  results.py  simulate.py
tests/: test_channels.py  test_data_integrity.py  test_firm_config.py  test_geometry.py  test_hydrology.py  test_material_api.py  test_materials.py  test_pressure.py  test_project_config.py  test_routing.py  test_standards.py  test_structures.py  test_units.py
tests/network/: test_components.py  test_controls.py  test_errors.py  test_io.py  test_model.py  test_plot.py  test_results.py  test_simulate.py  test_time.py
tests/network/data/: simple_network.inp
